Add visualizations and plots for analysis and data preprocessing
* **Import Libraries**
  - Import seaborn and matplotlib.pyplot libraries

* **Correlation Plot**
  - Move seaborn and matplotlib.pyplot imports to the top of the notebook

* **Visualizations**
  - Add section for visualizations and other plots
  - Add histogram for distribution of purchase prices
  - Add boxplot for purchase prices by house type
  - Add scatter plot for sqm vs purchase price

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -21,6 +21,8 @@
     "# Import necessary libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# Load the dataset\n",
     "df = pd.read_csv('dk_housing_prices.csv')\n",
@@ -180,12 +182,55 @@
    "metadata": {},
    "source": [
     "# Plot correlation between independent features and target variable\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "plt.figure(figsize=(12, 8))\n",
     "sns.heatmap(df.corr(), annot=True, cmap='coolwarm')\n",
     "plt.title('Correlation Plot')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizations and Other Plots for Analysis and Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Distribution of purchase prices\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.histplot(df['purchase_price'], bins=30, kde=True)\n",
+    "plt.title('Distribution of Purchase Prices')\n",
+    "plt.xlabel('Purchase Price')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Boxplot of purchase prices by house type\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.boxplot(x='house_type', y='purchase_price', data=df)\n",
+    "plt.title('Boxplot of Purchase Prices by House Type')\n",
+    "plt.xlabel('House Type')\n",
+    "plt.ylabel('Purchase Price')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Scatter plot of sqm vs purchase price\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.scatterplot(x='sqm', y='purchase_price', data=df)\n",
+    "plt.title('Scatter Plot of SQM vs Purchase Price')\n",
+    "plt.xlabel('SQM')\n",
+    "plt.ylabel('Purchase Price')\n",
     "plt.show()"
    ]
   }
