Add handling outliers section using z-score approach
* Add markdown cell for "Handling Outliers"
* Add code cell to calculate z-scores, identify and remove outliers
* Add markdown cell explaining the choice of z-score approach for handling outliers

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -233,6 +233,41 @@
     "plt.ylabel('Purchase Price')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Handling Outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Handling outliers using z-score approach\n",
+    "from scipy.stats import zscore\n",
+    "\n",
+    "# Calculate z-scores for numeric columns\n",
+    "z_scores = np.abs(zscore(df[numeric_cols]))\n",
+    "\n",
+    "# Set a threshold for z-scores\n",
+    "threshold = 3\n",
+    "\n",
+    "# Identify outliers\n",
+    "outliers = np.where(z_scores > threshold)\n",
+    "\n",
+    "# Remove outliers\n",
+    "df_cleaned = df[(z_scores < threshold).all(axis=1)]\n",
+    "df_cleaned.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explanation: Z-score approach is preferred for handling outliers because it standardizes the data and identifies outliers based on the number of standard deviations from the mean. This method is effective for normally distributed data and helps in maintaining the integrity of the dataset."
+   ]
   }
  ],
  "metadata": {
