Add comparison of feature selection methods to notebook
* Add markdown section for comparison of feature selection methods
* Add code cell to compare top 5 features from each method
* Add markdown explanation for comparing feature selection methods
* Update summary section to include comparison of feature selection methods
* Update list of tasks performed to include comparison of feature selection methods

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -222,6 +222,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Comparison of Feature Selection Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Compare the top 5 features from each method\n",
+    "comparison_df = pd.DataFrame({'f_regression': features_f, 'mutual_info_regression': features_mi, 'correlation': relevant_features.index})\n",
+    "comparison_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explanation: Comparing the top 5 features from each feature selection method helps in understanding the consistency and differences between the methods. This comparison provides insights into the most important features for predicting the target variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Correlation Plot"
    ]
   },
@@ -348,6 +371,7 @@
     "- Analysis of most expensive cities and cities with maximum unique zip codes\n",
     "- Proximity measures between specified columns\n",
     "- Feature selection using filter methods (f_regression, mutual_info_regression, correlation)\n",
+    "- Comparison of feature selection methods\n",
     "- Correlation plot\n",
     "- Visualizations (histograms, boxplots, scatter plots)\n",
     "- Handling outliers using z-score approach"
@@ -366,9 +390,9 @@
    "source": [
     "In this notebook, we performed feature engineering tasks on the DK housing prices dataset. We started by identifying the types of attributes and handling missing data using imputation. We then normalized the numeric attributes to improve the performance of machine learning algorithms. We analyzed the 5 most expensive cities and cities with maximum unique zip codes to understand the distribution of house prices and the diversity of locations.\n",
     "\n",
-    "We calculated proximity measures between house_type and sqm, house_type and purchase_price, and no_rooms and purchase_price to understand the relationship between different attributes. We performed feature selection using three filter methods (f_regression, mutual_info_regression, and correlation) to identify the most relevant features for predicting the target variable. We also plotted the correlation between independent features and the target variable to visualize the relationships.\n",
+    "We calculated proximity measures between house_type and sqm, house_type and purchase_price, and no_rooms and purchase_price to understand the relationship between different attributes. We performed feature selection using three filter methods (f_regression, mutual_info_regression, and correlation) to identify the most relevant features for predicting the target variable. We also compared the top 5 features from each method to understand the consistency and differences between the methods. We plotted the correlation between independent features and the target variable to visualize the relationships.\n",
     "\n",
-    "We created visualizations such as histograms, boxplots, and scatter plots to understand the distribution and relationships of different attributes in the dataset. We handled outliers using the z-score approach to maintain the integrity of the dataset. Finally, we summarized the techniques used in feature engineering, including identification of attribute types, handling missing data, normalization, analysis, proximity measures, feature selection, correlation plot, visualizations, and handling outliers."
+    "We created visualizations such as histograms, boxplots, and scatter plots to understand the distribution and relationships of different attributes in the dataset. We handled outliers using the z-score approach to maintain the integrity of the dataset. Finally, we summarized the techniques used in feature engineering, including identification of attribute types, handling missing data, normalization, analysis, proximity measures, feature selection, comparison of feature selection methods, correlation plot, visualizations, and handling outliers."
    ]
   },
   {
