Update feature engineering steps and documentation
Add feature engineering tasks and documentation to `feature_engineering.ipynb` and `feature_engineering_steps.md`.

* **Normalization**: Normalize numeric attributes using z-score normalization.
* **Proximity Measures**: Calculate Euclidean distance, Manhattan distance, Cosine similarity, Mahalanobis distance, and create a dissimilarity matrix for categorical columns.
* **Feature Selection**: Apply Pearson coefficient and Recursive Feature Elimination (RFE) methods for feature selection.
* **Comparison**: Compare the top 5 features from each feature selection method.
* **Documentation**: Add explanations and document the techniques used in the respective sections.

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -23,6 +23,9 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.feature_selection import SelectKBest, f_regression, mutual_info_regression, RFE\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from scipy.stats import pearsonr, zscore\n",
     "\n",
     "# Load the dataset\n",
     "df = pd.read_csv('dk_housing_prices.csv')\n",
@@ -78,9 +81,9 @@
    "cell_type": "code",
    "metadata": {},
    "source": [
-    "# Normalize numeric attributes\n",
+    "# Normalize numeric attributes using z-score normalization\n",
     "numeric_cols = df.select_dtypes(include=[np.number]).columns\n",
-    "df[numeric_cols] = (df[numeric_cols] - df[numeric_cols].mean()) / df[numeric_cols].std()\n",
+    "df[numeric_cols] = df[numeric_cols].apply(zscore)\n",
     "df.head()"
    ]
   },
@@ -158,6 +161,58 @@
    ]
   },
   {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Euclidean distance between numeric columns\n",
+    "from scipy.spatial.distance import euclidean\n",
+    "euclidean_distance = euclidean(df['sqm'], df['purchase_price'])\n",
+    "euclidean_distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Manhattan distance between numeric columns\n",
+    "from scipy.spatial.distance import cityblock\n",
+    "manhattan_distance = cityblock(df['sqm'], df['purchase_price'])\n",
+    "manhattan_distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Cosine similarity between numeric columns\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "cosine_sim = cosine_similarity(df[['sqm']], df[['purchase_price']])\n",
+    "cosine_sim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Mahalanobis distance between numeric columns\n",
+    "from scipy.spatial.distance import mahalanobis\n",
+    "cov_matrix = np.cov(df[['sqm', 'purchase_price']].T)\n",
+    "inv_cov_matrix = np.linalg.inv(cov_matrix)\n",
+    "mahalanobis_distance = mahalanobis(df['sqm'], df['purchase_price'], inv_cov_matrix)\n",
+    "mahalanobis_distance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Dissimilarity matrix for categorical columns\n",
+    "from sklearn.metrics import pairwise_distances\n",
+    "dissimilarity_matrix = pairwise_distances(df[['house_type', 'sales_type']], metric='hamming')\n",
+    "dissimilarity_matrix"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -176,7 +231,6 @@
    "metadata": {},
    "source": [
     "# Feature selection using filter methods\n",
-    "from sklearn.feature_selection import SelectKBest, f_regression, mutual_info_regression\n",
     "\n",
     "# Define independent variables and target variable\n",
     "X = df.drop(columns=['purchase_price'])\n",
@@ -212,10 +266,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Apply Pearson coefficient\n",
+    "pearson_coefficients = df.corr(method='pearson')['purchase_price'].sort_values(ascending=False)\n",
+    "pearson_coefficients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "# Apply Recursive Feature Elimination (RFE)\n",
+    "model = LinearRegression()\n",
+    "rfe = RFE(model, n_features_to_select=5)\n",
+    "rfe.fit(X, y)\n",
+    "features_rfe = X.columns[rfe.get_support()]\n",
+    "features_rfe"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explanation: Feature selection is performed to identify the most relevant features for predicting the target variable. We use different filter methods such as f_regression, mutual_info_regression, and correlation to select the top features."
+    "### Explanation: Feature selection is performed to identify the most relevant features for predicting the target variable. We use different filter methods such as f_regression, mutual_info_regression, correlation, Pearson coefficient, and Recursive Feature Elimination (RFE) to select the top features."
    ]
   },
   {
@@ -230,7 +305,7 @@
    "metadata": {},
    "source": [
     "# Compare the top 5 features from each method\n",
-    "comparison_df = pd.DataFrame({'f_regression': features_f, 'mutual_info_regression': features_mi, 'correlation': relevant_features.index})\n",
+    "comparison_df = pd.DataFrame({'f_regression': features_f, 'mutual_info_regression': features_mi, 'correlation': relevant_features.index, 'pearson': pearson_coefficients.index[:5], 'rfe': features_rfe})\n",
     "comparison_df"
    ]
   },
@@ -370,7 +445,7 @@
     "- Normalization of numeric attributes\n",
     "- Analysis of most expensive cities and cities with maximum unique zip codes\n",
     "- Proximity measures between specified columns\n",
-    "- Feature selection using filter methods (f_regression, mutual_info_regression, correlation)\n",
+    "- Feature selection using filter methods (f_regression, mutual_info_regression, correlation, Pearson coefficient, RFE)\n",
     "- Comparison of feature selection methods\n",
     "- Correlation plot\n",
     "- Visualizations (histograms, boxplots, scatter plots)\n",
@@ -390,7 +465,7 @@
    "source": [
     "In this notebook, we performed feature engineering tasks on the DK housing prices dataset. We started by identifying the types of attributes and handling missing data using imputation. We then normalized the numeric attributes to improve the performance of machine learning algorithms. We analyzed the 5 most expensive cities and cities with maximum unique zip codes to understand the distribution of house prices and the diversity of locations.\n",
     "\n",
-    "We calculated proximity measures between house_type and sqm, house_type and purchase_price, and no_rooms and purchase_price to understand the relationship between different attributes. We performed feature selection using three filter methods (f_regression, mutual_info_regression, and correlation) to identify the most relevant features for predicting the target variable. We also compared the top 5 features from each method to understand the consistency and differences between the methods. We plotted the correlation between independent features and the target variable to visualize the relationships.\n",
+    "We calculated proximity measures between house_type and sqm, house_type and purchase_price, and no_rooms and purchase_price to understand the relationship between different attributes. We performed feature selection using five filter methods (f_regression, mutual_info_regression, correlation, Pearson coefficient, and RFE) to identify the most relevant features for predicting the target variable. We also compared the top 5 features from each method to understand the consistency and differences between the methods. We plotted the correlation between independent features and the target variable to visualize the relationships.\n",
     "\n",
     "We created visualizations such as histograms, boxplots, and scatter plots to understand the distribution and relationships of different attributes in the dataset. We handled outliers using the z-score approach to maintain the integrity of the dataset. Finally, we summarized the techniques used in feature engineering, including identification of attribute types, handling missing data, normalization, analysis, proximity measures, feature selection, comparison of feature selection methods, correlation plot, visualizations, and handling outliers."
    ]
@@ -590,27 +665,30 @@
    "source": [
     "### Explanation: Processing the quarter column ensures consistency in the data format. This step converts integer values to a consistent string format (e.g., 'Q1', 'Q2', etc.)."
    ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
   },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-    "nbconvert_exporter": "python",
-    "pygments_lexer": "ipython3",
-    "version": "3.8.5"
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Engineering Tasks on DK Housing Prices Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This repository contains a Python notebook that performs feature engineering tasks on the DK housing prices dataset. The dataset contains residential household sales during the period 1992 - 2024. The feature engineering tasks include:\n",
+    "\n",
+    "- Identification of attribute types\n",
+    "- Handling missing data\n",
+    "- Normalization of numeric attributes\n",
+    "- Analysis of the 5 most expensive cities and cities with maximum unique zip codes\n",
+    "- Calculation of proximity measures between specified columns\n",
+    "- Feature selection using filter methods (f_regression, mutual_info_regression, correlation)\n",
+    "- Correlation plot\n",
+    "- Visualizations (histograms, boxplots, scatter plots)\n",
+    "- Handling outliers using the z-score approach"
+   ]
   }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+ ]
 }
