* Convert `date` column to datetime format and extract relevant features
  - Add conversion of `date` column to datetime format
  - Extract `year`, `month`, and `day` from `date` column
  - Drop `date` column from independent variables

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -236,6 +236,13 @@
     "X = df.drop(columns=['purchase_price'])\n",
     "y = df['purchase_price']\n",
     "\n",
+    "# Convert date column to datetime format and extract relevant features\n",
+    "df['date'] = pd.to_datetime(df['date'])\n",
+    "df['year'] = df['date'].dt.year\n",
+    "df['month'] = df['date'].dt.month\n",
+    "df['day'] = df['date'].dt.day\n",
+    "X = df.drop(columns=['purchase_price', 'date'])\n",
+    "\n",
     "# Apply SelectKBest with f_regression\n",
     "kbest_f = SelectKBest(score_func=f_regression, k=5)\n",
     "kbest_f.fit(X, y)\n",
