Fix the ValueError by converting the `date` column to datetime format and extracting relevant features
* Fix the FutureWarning by using the correct method for inplace operations
* Fix the ValueError by converting the `date` column to datetime format and extracting relevant features

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/shrikant131/FeatureEngineering?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -64,9 +64,9 @@
     "# Impute missing data with mean for numeric columns and mode for categorical columns\n",
     "for col in df.columns:\n",
     "    if df[col].dtype == 'object':\n",
-    "        df[col].fillna(df[col].mode()[0], inplace=True)\n",
+    "        df[col].fillna({col: df[col].mode()[0]}, inplace=True)\n",
     "    else:\n",
-    "        df[col].fillna(df[col].mean(), inplace=True)\n",
+    "        df[col].fillna({col: df[col].mean()}, inplace=True)\n",
     "df.isnull().sum()"
    ]
   },
