--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -2220,7 +2220,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 697
+          "height": 544
         },
         "id": "jECz-4Hgs62O",
         "outputId": "cc5ba05d-b56a-4b01-f662-66faa23807c3"
@@ -2271,7 +2271,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 551
+          "height": 431
         },
         "id": "hkmRn_5Bs62Q",
         "outputId": "6e71ffc9-9852-4151-d1fe-8b9245994b4e"
@@ -2304,7 +2304,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 482
+          "height": 378
         },
         "id": "QrqYurkgs62R",
         "outputId": "96e647fe-3d8c-4411-84e5-b32a0e18ba23"
@@ -2337,7 +2337,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 564
+          "height": 444
         },
         "id": "mRKhGRwfs62S",
         "outputId": "8f4ac2ee-086a-49f9-d30e-41043c3f6622"
@@ -2462,6 +2462,7 @@
     },
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
