Optimize feature engineering code for faster execution
---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/shrikant131/FeatureEngineering?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/feature_engineering1.ipynb
+++ b/feature_engineering1.ipynb
@@ -34,6 +34,7 @@
         "import numpy as np\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
+        "import joblib\n",
         "\n",
         "# Load the dataset\n",
         "df = pd.read_csv('DKHousingPricesSample100k.csv')\n",
@@ -397,7 +398,7 @@
               "    30% {\n",
               "      border-color: transparent;\n",
               "      border-left-color: var(--fill-color);\n",
-              "      border-top-color: var(--fill-color);\n",
+              "      border-top-color: var (--fill-color);\n",
               "      border-right-color: var(--fill-color);\n",
               "    }\n",
               "    40% {\n",
@@ -1931,108 +1932,14 @@
               "      display: none;\n",
               "      fill: #1967D2;\n",
               "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
+              "      padding: 0;\n",
               "      width: 32px;\n",
               "    }\n",
               "\n",
               "    .colab-df-convert:hover {\n",
               "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-buttons div {\n",
-              "      margin-bottom: 4px;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "    <script>\n",
-              "      const buttonEl =\n",
-              "        document.querySelector('#df-581f6110-f8a2-4081-bae5-c413db407f4c button.colab-df-convert');\n",
-              "      buttonEl.style.display =\n",
-              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-581f6110-f8a2-4081-bae5-c413db407f4c');\n",
-              "        const dataTable =\n",
-              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                    [key], {});\n",
-              "        if (!dataTable) return;\n",
-              "\n",
-              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "          + ' to learn more about interactive tables.';\n",
-              "        element.innerHTML = '';\n",
-              "        dataTable['output_type'] = 'display_data';\n",
-              "        await google.colab.output.renderOutput(dataTable, element);\n",
-              "        const docLink = document.createElement('div');\n",
-              "        docLink.innerHTML = docLinkHtml;\n",
-              "        element.appendChild(docLink);\n",
-              "      }\n",
-              "    </script>\n",
-              "  </div>\n",
-              "\n",
-              "\n",
-              "<div id=\"df-1112a650-aeab-4c78-b673-e46f0def01a1\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1112a650-aeab-4c78-b673-e46f0def01a1')\"\n",
-              "            title=\"Suggest charts\"\n",
-              "            style=\"display:none;\">\n",
-              "\n",
-              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "     width=\"24px\">\n",
-              "    <g>\n",
-              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
-              "    </g>\n",
-              "</svg>\n",
-              "  </button>\n",
-              "\n",
-              "<style>\n",
-              "  .colab-df-quickchart {\n",
-              "      --bg-color: #E8F0FE;\n",
-              "      --fill-color: #1967D2;\n",
-              "      --hover-bg-color: #E2EBFA;\n",
-              "      --hover-fill-color: #174EA6;\n",
-              "      --disabled-fill-color: #AAA;\n",
-              "      --disabled-bg-color: #DDD;\n",
-              "  }\n",
-              "\n",
-              "  [theme=dark] .colab-df-quickchart {\n",
-              "      --bg-color: #3B4455;\n",
-              "      --fill-color: #D2E3FC;\n",
-              "      --hover-bg-color: #434B5C;\n",
-              "      --hover-fill-color: #FFFFFF;\n",
-              "      --disabled-bg-color: #3B4455;\n",
-              "      --disabled-fill-color: #666;\n",
-              "  }\n",
-              "\n",
-              "  .colab-df-quickchart {\n",
-              "    background-color: var(--bg-color);\n",
-              "    border: none;\n",
-              "    border-radius: 50%;\n",
-              "    cursor: pointer;\n",
-              "    display: none;\n",
-              "    fill: var(--fill-color);\n",
-              "    height: 32px;\n",
-              "    padding: 0;\n",
-              "    width: 32px;\n",
-              "  }\n",
-              "\n",
-              "  .colab-df-quickchart:hover {\n",
-              "    background-color: var(--hover-bg-color);\n",
-              "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "    fill: var(--button-hover-fill-color);\n",
+              "      box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: var(--button-hover-fill-color);\n",
               "  }\n",
               "\n",
               "  .colab-df-quickchart-complete:disabled,\n",
@@ -2182,17 +2089,17 @@
         "    # --- Categorical Feature Encoding ---\n",
         "    categorical_features = X.select_dtypes(include=['object']).columns.tolist()\n",
         "    encoder = OneHotEncoder(sparse_output=True, handle_unknown='ignore')\n",
-        "    encoded_data = encoder.fit_transform(X[categorical_features])\n",
+        "    encoded_data = joblib.Parallel(n_jobs=-1)(joblib.delayed(encoder.fit_transform)(X[categorical_features]))\n",
         "    encoded_df = pd.DataFrame.sparse.from_spmatrix(\n",
-        "        encoded_data, columns=encoder.get_feature_names_out(categorical_features), index=X.index)\n",
+        "        encoded_data[0], columns=encoder.get_feature_names_out(categorical_features), index=X.index)\n",
         "    X = X.drop(columns=categorical_features)\n",
         "    X = pd.concat([X, encoded_df], axis=1)\n",
         "\n",
         "    # --- Imputation ---\n",
         "    X.columns = X.columns.astype(str)\n",
         "    imputer = SimpleImputer(strategy='mean')\n",
-        "    X_imputed = imputer.fit_transform(X)\n",
-        "    X = pd.DataFrame(X_imputed, columns=X.columns)\n",
+        "    X_imputed = joblib.Parallel(n_jobs=-1)(joblib.delayed(imputer.fit_transform)(X))\n",
+        "    X = pd.DataFrame(X_imputed[0], columns=X.columns)\n",
         "\n",
         "\n",
         "\n",
